# media-automation

./: .coderabbit.yaml  .gates.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
rabsody/: Cargo.toml  README.md  build.rs
rabsody/src/: api.rs  cache.rs  config.rs  embed.rs  encode.rs  error.rs  items.rs  main.rs  tasks.rs
rabsody/src/harness/: backup.rs  mod.rs
scripts/: gate.sh
smpr/: Cargo.toml  README.md  build.rs
smpr/fuzz/: Cargo.toml
smpr/fuzz/corpus/classify_lyrics/: clean  false_positive  pg13  r_stem
smpr/fuzz/corpus/strip_lrc_tags/: metadata  mixed  plain  timestamped
smpr/fuzz/fuzz_targets/: classify_lyrics.rs  strip_lrc_tags.rs
smpr/src/: detection.rs  lib.rs  main.rs
smpr/src/config/: defaults.rs  mod.rs  tests.rs
smpr/src/enrich/: lock.rs  mod.rs  tests.rs
smpr/src/rating/: mod.rs  scope.rs  tests.rs
smpr/src/server/: mod.rs  types.rs
smpr/src/server/tests/: integration.rs  unit.rs
smpr/src/sources/: deezer.rs  itunes.rs  matcher.rs  mod.rs
smpr/src/store/: error.rs  mod.rs  tests.rs
smpr/src/tui/: action_tests.rs  app_tests.rs  io_tests.rs  render_tests.rs
smpr/src/wizard/: output.rs
tools/: ImportLidarrManual.py  README-import.md
tools/lidarr/: ImportLidarrManual.py  README.md  test_preserve_sidecars.py
tools/picard/: README.md  picard_post_save.py  test_picard_post_save.py
